--- a/public/index.html
+++ b/public/index.html
@@ -17,36 +17,255 @@
 
   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kurale&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<link href="https://fonts.googleapis.com/css2?family=Heebo&family=Nunito:wght@300;400;500&family=Orbitron:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
+<meta name="theme-color" content="#2f6dd7" />
   </head>
   <body class="body-font">
-    <header>
-      <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div>
-      <div class="title fancy-text">Campus</div>
+    <header id="header">
+      <div></div>
+
+      <!-- <div class="icon-container"><img src="src/assets/h_icon.png" alt="" class="image-icon"></div> -->
+      <div class="title fancy-text">campus.com</div>
+      <div id="search-bar">
+        <div class="min-search-icon"><i class="material-icons">search</i></div>
+        <input type="search"/ placeholder="Search for products, brands...">
+      </div>
       <div class="items">
-        <div><a href="#">Login</a></div>
+        <div class="on-laptop-up"><a href="registration.html">Login</a></div>
           <div class="on-laptop-up"><a href="#">Sign Up</a></div>
           <div class="on-laptop-up"><a href="#">About</a></div>
           <div class="on-laptop-up"><a href="#">Feed back</a></div>
-          <div class="on-laptop-down"><a href="#"><i class="material-icons">menu</i></a></div>
+          <div class="on-laptop-down"><a href="#"><!--🔍--><i class="material-icons">search</i></a></div>
+          <div class="on-laptop-down"><a href="#"><!--🙍‍♀️--><i class="material-icons">account_circle</i></a></div>
+          <div class="on-laptop-down"><a href="#"><!--📝--><i class="material-icons">menu</i></a></div>
         </div>
+          <div></div>
+
     </header>
     <div id="back-drop">
-        <div class="child" style="font-weight: 500;padding-bottom: 20px;">Hello friend!</div>
-        <div class="child">
-            <div id="search-box">
-                <div><i class="material-icons">search</i></div>
-                <div style="text-align: left;">
-                    What are you looking for?
-                </div>
-            </div>
-        </div>
+      <div id="back-drop-wrapper"></div>
+      <div class="child">
+        <p>We make trade easier and time convient for you</p></div>
+     
 
     </div>
+  
+    <div class="category-card-container">
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Fashion</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+  
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Groceries</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Fashion</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+  
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Groceries</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+
+
+
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Fashion</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+  
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Groceries</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+
+
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Fashion</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+  
+      <div class="category-card">
+        <div class="action">
+          <div><h3>Groceries</h3></div>
+          <div><a href="#" class="btn">Shop now</a></div>
+        </div>
+          <div class="item-container">
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Clothing</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Foot wear</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/air-jordan-1-chicago-1985-player-sample.jpg');"></div>
+              <div class="label">Cosmetics</div>
+            </div>
+            <div>
+              <div class="image" style="background-image: url('src/assets/download.jpg');"></div>
+              <div class="label">Jewry</div>
+            </div>
+          </div>
+        </h3>
+      </div>
+    </div>
+
  
         <!-- update the version number as needed -->
         <!-- <script defer src="/__/firebase/9.6.1/firebase-app-compat.js"></script>
