--- a/public/registration.html
+++ b/public/registration.html
@@ -54,12 +54,12 @@
     <main class="mdc-typography body-font">
       <div class="side-image" id="side-image">
         <div class="side-wraper">
-          <div class="text-container">
+          <!-- <div class="text-container">
             <h3 style="font-size: 3.5rem;
             font-family: 'KURALE';margin-bottom: 15px;">Welcome to Campus</h3>
             <p style="font-size: 20px;
             font-style: italic;font-weight:200;">A Community of Students Trading at their Convinience</p>
-          </div>
+          </div> -->
         </div>
         
       </div>
