--- a/public/index.html
+++ b/public/index.html
@@ -21,17 +21,18 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-<meta name="theme-color" content="#2f6dd7" />
+<meta name="theme-color" content="#24027B" />
+<link rel="shortcut icon" type="image/jpg" href="src/assets/logos/logo.png"/>
   </head>
   <body class="body-font">
     <header>
       <div class="top-section">
         <div>
-          <img src="src/assets/logos/logo.png" class="logo"/>
+          <img src="src/assets/logos/logo.svg" class="logo"/>
         </div>
         <div class="actions">
-          <i class="material-icons">shopping_cart</i>
-          <i class="material-icons">menu</i>
+          <a href="#"><i class="material-icons">shopping_cart</i></a>
+          <a href="#"><i class="material-icons">menu</i></a>
         </div>
       </div>
       <div class="bottom-section">
