--- a/public/index.html
+++ b/public/index.html
@@ -19,10 +19,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
 <meta name="theme-color" content="#24027B" />
 <link rel="shortcut icon" type="image/jpg" href="src/assets/logos/logo.png"/>
+<link rel="stylesheet" href="src/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
   </head>
   <body class="body-font">
     <header>
@@ -46,7 +47,58 @@
     
     </header>
    
+<main style="margin-top: 20px;">
+  <div class="department" >
+    <div class="department-background" style="background-image: url('src/assets/departments/fashion.png')"></div>
+    <div class="department-title"><h2>Fashion</h2></div>
+    <div class="owl-carousel" id="fashion-carousel" >
+      <div class="item-wrapper">
+        <div class="item"> 
+          <div class="image-container" style="background-image: url('src/assets/departments/cosmetics.png');"></div>
+          <div class="label">Cosmetics</div>
+        </div>
+      </div>
+      
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/jewelry.png');"></div>
+        <div class="label">Jewelry</div>
+      </div>
 
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/for\ women.png');"></div>
+        <div class="label">For women</div>
+      </div>
+
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/for\ men.png');"></div>
+        <div class="label">For men</div>
+      </div>
+
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/beauty.png');"></div>
+        <div class="label">Beauty</div>
+      </div>
+
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/eye\ wear.png');"></div>
+        <div class="label">Eye wear</div>
+      </div>
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/womens\ shoes.png');"></div>
+        <div class="label">Women's shoes</div>
+      </div>
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/mens\ shoes.png');"></div>
+        <div class="label">Men's shoes</div>
+      </div>
+      <div class="item"> 
+        <div class="image-container" style="background-image: url('src/assets/departments/sneakers.png');"></div>
+        <div class="label">Sneakers</div>
+      </div>
+    </div>
+  </div>
+  
+</main>
 
 
     <!-- <button type="button" class="icon-button">
@@ -62,6 +114,56 @@
         <script defer src="/__/firebase/9.6.1/firebase-firestore-compat.js"></script>
         <script defer src="/__/firebase/9.6.1/firebase-storage-compat.js"></script>
         <script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
-        <script src="src/home.js" defer type="text/javascript"></script>
+        <!--<script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
+        <script src="src/js/Jquery.min.js" type="text/javascript"></script>
+        <script src="src/OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
+        <script type="text/javascript">
+          $(document).ready(function(){
+            $("#fashion-carousel").owlCarousel({
+              loop:true,
+              stagePadding: 15,
+              margin:10,
+              nav:false,
+              responsive:{
+                  0:{
+                      items:1.8
+                  },
+                  300:{
+                      items:1.9
+                  },
+                  330:{
+                      items:2.1
+                  },
+                  360:{
+                      items:2.2
+                  },
+                  400:{
+                      items:2.4
+                  },
+                  460:{
+                      items:2.6
+                  },
+                  500:{
+                      items:2.8
+                  },
+                  550:{
+                      items:3.0
+                  },
+                  600:{
+                      items:3.2
+                  },
+                  650:{
+                      items:4.1
+                  },
+                  700:{
+                      items:4.3
+                  },
+                  750:{
+                      items:4.5
+                  }
+              }
+            });
+          });
+        </script>
   </body>
 </html>
