--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,11 @@
       </div>
     
     </header>
+    <div class="prompt">
+      <h2>You may have a special <span class="offer">offer</span></h2>
+      <p>sign into your account to find out</p>
+      <button type="button" class="signup">Sign in</button>
+    </div>
    
 <main style="margin-top: 20px;">
   <div class="department" >
