--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,8 @@
    
 <main style="margin-top: 20px;">
   <div class="prompt">
-    <h2>You may have a special <span class="offer">offer</span></h2>
-    <p>sign into your account to find out</p>
+    <h2>You may have a special offer</h2>
+    <p>Sign into your account to find out</p>
     <button type="button" class="signup">Sign in</button>
   </div>
   <div class="department" >
