--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Campus-Signup</title>
     <link rel="stylesheet" href="src/style.css">
-    <!-- <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  /> -->
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   <style>
       :root {
   --animate-duration: 500ms;
@@ -32,7 +30,7 @@
           <img src="src/assets/logos/logo.svg" class="logo"/>
         </div>
         <div class="actions">
-          <a href="#"><i class="material-icons">shopping_cart</i></a>
+          <a href="#" id="cart-button-open"><i class="material-icons">shopping_cart</i></a>
           <a href="#"><i class="material-icons">menu</i></a>
         </div>
       </div>
@@ -120,10 +118,10 @@
 
 </footer>
 
-<div class="cart_items">
-  <div class="cart_container">
+<div class="cart_items animate__animated hidden" id="cart">
+  <div class="cart_container animate__animated" id="cart_container">
     <div class="cart_items_header">
-      <div class="close-button"><a href="#"><i class="material-icons" style="color: #000000;;">keyboard_arrow_down</i></a></div>
+      <div class="close-button"><a href="#" id="cart-button-close"><i class="material-icons" style="color: #000000;">keyboard_arrow_down</i></a></div>
       <div class="title">Cart</div>
     </div>
     <div class="details">
@@ -147,8 +145,7 @@
             <div class="title">Welch's Fruit Snacks, Mixed Fruit, Gluten Free, Bulk Pack, 0.9 oz ...</div>
             <div class="price">K50.00</div>
 
-            <di
-            v class="quantity-control">
+            <div class="quantity-control">
               <div class="minus"><i class="material-icons tetiary-text">remove_circle</i></div>
               <div class="qty">3</div>
               <div class="add"><i class="material-icons secondary-text">add_circle</i></div>
@@ -201,6 +198,7 @@
         <script defer src="/__/firebase/9.6.1/firebase-storage-compat.js"></script>
         <script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
         <!--<script defer src="/__/firebase/init.js?useEmulator=false"></script> -->
+        <script src="src/js/home.js" type="text/javascript"></script>
         <script src="src/js/Jquery.min.js" type="text/javascript"></script>
         <script src="src/OwlCarousel2-2.3.4/dist/owl.carousel.min.js" type="text/javascript"></script>
         <script type="text/javascript">
