--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;1,100;1,200;1,300;1,400;1,500;1,600&family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
-<meta name="theme-color" content="#24027B" />
+<meta name="theme-color" content="#000000" />
 <link rel="shortcut icon" type="image/jpg" href="src/assets/logos/logo.png"/>
 <link rel="stylesheet" href="src/OwlCarousel2-2.3.4/dist/assets/owl.carousel.min.css">
   </head>
